# lambdamoo-tests

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/rfcs/: 001-source-module-format.md
harness/: __init__.py  build.py  clean.py  config.py  repos.py
lambdamoo_tests/: __init__.py  cli.py  setup.py
lib/: __init__.py  assertions.py  client.py  features.py  moo_server.py  protocol.py
test_suites/builtins/: test_arithmetic.py  test_bitwise.py  test_capabilities.py  test_lists.py  test_strings.py  test_waifs.py
test_suites/database/: test_objects.py
test_suites/network/: test_connection.py  test_network_connections.py
test_suites/persistence/: test_checkpoint.py  test_data_types.py  test_tasks.py  test_verbs.py  test_waifs.py
test_suites/server_modes/: __init__.py  test_emergency.py
